# srun-auto-dial

./: .gitignore  Cargo.toml  README.md  userinfo.json.example
src/: dhcpc.rs  main.rs  netlink.rs  srun.rs
src/srun/: base64.rs  utils.rs  xencode.rs
